# bc_python_6-10

./: .cz.toml  .flake8  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
aula07/: exemplo_00.py  lista_exercicios.py
aula09/: exemplo_00.py  log_decorador.py
